--- a/src/app/pages/apps/policy-update/policy-update.component.html
+++ b/src/app/pages/apps/policy-update/policy-update.component.html
@@ -10,7 +10,7 @@
             <div>
               <h2>Blocked urls</h2>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="text" placeholder="Search blocked url" [(ngModel)]="searchText" />
+                <input matInput type="text" placeholder="Search blocked url" [(ngModel)]="searchText" (keyup.enter)="searchAllowedUrl()"/>
                 <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
                   (click)="searchAllowedUrl()">
                   <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
@@ -53,7 +53,7 @@
             <h2>Allowed urls</h2>
 
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="text" placeholder="Search allowed url" [(ngModel)]="blockedSearchText" />
+              <input matInput type="text" placeholder="Search allowed url" [(ngModel)]="blockedSearchText" (keyup.enter)="applyBlockedFilter()"/>
               <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
                 (click)="applyBlockedFilter()">
                 <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
@@ -181,7 +181,7 @@
             <div>
               <h2>Blocked IPs</h2>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="text" placeholder="Search blocked ip" [(ngModel)]="searchTextForAllowedIPs" />
+                <input matInput type="text" placeholder="Search blocked ip" [(ngModel)]="searchTextForAllowedIPs" (keyup.enter)="searchAllowedIP()" />
                 <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
                   (click)="searchAllowedIP()">
                   <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
@@ -224,7 +224,7 @@
             <h2>Allowed IPs</h2>
 
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="text" placeholder="Search allowed ip" [(ngModel)]="searchTextForBlockedIPs" />
+              <input matInput type="text" placeholder="Search allowed ip" [(ngModel)]="searchTextForBlockedIPs" (keyup.enter)="applyBlockedIPFilter()" />
               <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
                 (click)="applyBlockedIPFilter()">
                 <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
@@ -232,7 +232,7 @@
             </mat-form-field>
 
             <!-- Checkbox list for blocked URLs -->
-            <div style="background-color: #fff8ec; height: 40vh;overflow-y: scroll; padding: 10px; border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);">
+            <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px; border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);">
               <div *ngFor="let item of filteredBlockedIPs">
                 <label>
                   <input type="checkbox" [value]="item" (change)="onCheckboxChangeIp($event, item, 'blocked')" />
